Fixed the solar flare webgl game link showing up on mobile

--- a/Styles/ExhibitSection.css
+++ b/Styles/ExhibitSection.css
@@ -67,13 +67,13 @@
     text-decoration: underline;
 }
 
-.slide-links
+.slide-links-container
 {
     position: absolute;
     bottom: 0;
     width: auto;
 }
-.slide-links a
+.slide-link
 {
     width: 100%;
     display: block;
@@ -82,7 +82,7 @@
     margin-top: 10px;
     text-align: center;
 }
-.slide-links a:hover
+.slide-links:hover
 {
     color: #b0b0b0;
     text-decoration: underline;
@@ -90,7 +90,17 @@
 
 .link-to-webgl-game
 {
+    width: 100%;
     display: block;
+    color: #8d8d8d;
+    text-decoration: none;
+    margin-top: 10px;
+    text-align: center;
+}
+.link-to-webgl-game:hover
+{
+    color: #b0b0b0;
+    text-decoration: underline;
 }
 
 @media(max-width: 768px)
